--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,11 +3,15 @@
         "browser": true,
         "commonjs": true,
         "jquery": true,
+        "node": true,
         "es2021": true
     },
     "extends": "eslint:recommended",
     "parserOptions": {
         "ecmaVersion": 12
+    },
+    "globals": {
+        "BigNumber":true
     },
     "rules": {
         "no-unused-vars": "warn",
