--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "calc-web",
   "version": "1.0.0",
-  "description": "![タイトル画像](./images/title.png) この電卓は、Webで無料で使える電卓です。   [https://rio-gunawan.github.io/calc-web/](https://rio-gunawan.github.io/calc-web/)",
+  "description": "![タイトル画像](./images/title.png) この電卓は、Webで無料で使える電卓です。   [https://arcody.com/tools/calc/](https://arcody.com/tools/calc/)",
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
