--- a/.htaccess
+++ b/.htaccess
@@ -8,4 +8,4 @@ RewriteRule ^(.*)index.html$ https://www.arcody.com/tools/calc/$1 [R=301,L]
 RewriteCond %{HTTPS} off
 RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
 
-ErrorDocument 404 /404.html
+ErrorDocument 404 404.html
